--- a/views/order-list.ejs
+++ b/views/order-list.ejs
@@ -100,10 +100,33 @@
                     <td><%= order.iimp %></td>
                     <td><%= order.data %></td>
                     <td>
-                        <form action="/detail-order" method="get">
-                            <input type="hidden" name="ccod" value="<%= order.ccod %>">
-                            <button type="submit" class="btn btn-link"><i class="material-icons">&#xe88f</i></button>
-                        </form>
+                        <button class="btn btn-link"
+                                data-toggle="modal"
+                                data-target="#noteModal">
+                            <i class="material-icons">&#xe85d</i>
+                        </button>
+                        <div class="modal fade" id="noteModal" tabindex="-1" role="dialog"
+                             aria-labelledby="noteModal" aria-hidden="true">
+                            <div class="modal-dialog" role="document">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title"
+                                            id="noteModalTitle">Note dell'ordine</h5>
+                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>
+                                        </button>
+                                    </div>
+                                    <div class="modal-body">
+                                    <textarea class="form-control" name="xnote" maxlength="1000"
+                                              spellcheck="false" form="orderNote" readonly><%= order.xnota %></textarea>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </td>
                     <td>
                         <% if (order.cstt == 10 || user.cage == 9999 || user.cage == 0) { %>
