--- a/views/new-order-cond-pag.ejs
+++ b/views/new-order-cond-pag.ejs
@@ -40,6 +40,7 @@
                                 <li><a class="dropdown-item" href="/new-order">Cliente</a></li>
                                 <li><a class="dropdown-item" href="/new-order-product">Prodotti</a></li>
                                 <li><a class="dropdown-item" href="/new-order-promo">Promozioni</a></li>
+                                <li><a class="dropdown-item" href="/new-order-campioncini">Campioncini</a></li>
                                 <div class="dropdown-divider"></div>
                                 <li><a class="dropdown-item" href="/home">Annulla</a></li>
                             </ul>
