--- a/views/new-order-product.ejs
+++ b/views/new-order-product.ejs
@@ -39,6 +39,8 @@
                             <ul class="dropdown-menu" aria-labelledby="dropdownAzioni">
                                 <li><a class="dropdown-item" href="/new-order-cond-pag">Avanti</a></li>
                                 <li><a class="dropdown-item" href="/new-order">Indietro</a></li>
+                                <div class="dropdown-divider"></div>
+                                <li><a class="dropdown-item" href="/new-order-campioncini">Campioncini</a></li>
                                 <li><a class="dropdown-item" href="/new-order-promo">Promozioni</a></li>
                                 <div class="dropdown-divider"></div>
                                 <li><a class="dropdown-item" href="/home">Annulla</a></li>
