--- a/views/new-order-promo.ejs
+++ b/views/new-order-promo.ejs
@@ -39,7 +39,9 @@
                             <ul class="dropdown-menu" aria-labelledby="dropdownAzioni">
                                 <li><a class="dropdown-item" href="/new-order-cond-pag">Avanti</a></li>
                                 <li><a class="dropdown-item" href="/new-order">Indietro</a></li>
+                                <div class="dropdown-divider"></div>
                                 <li><a class="dropdown-item" href="/new-order-product">Prodotti</a></li>
+                                <li><a class="dropdown-item" href="/new-order-campioncini">Campioncini</a></li>
                                 <div class="dropdown-divider"></div>
                                 <li><a class="dropdown-item" href="/home">Annulla</a></li>
                             </ul>
