--- a/views/order-list.ejs
+++ b/views/order-list.ejs
@@ -102,22 +102,22 @@
                     <td>
                         <button class="btn btn-link"
                                 data-toggle="modal"
-                                data-target="#noteModal" <%- (order.xnota != '') ? '' : 'disabled' %>>
+                                data-target="#noteModal<%= order.ccod %>" <%- (order.xnota != '') ? '' : 'disabled' %>>
                             <i class="material-icons">&#x<%- (order.xnota != '') ? 'e8cd' : 'e92a' %></i>
                         </button>
-                        <div class="modal fade" id="noteModal" tabindex="-1" role="dialog"
+                        <div class="modal fade" id="noteModal<%= order.ccod %>" tabindex="-1" role="dialog"
                              aria-labelledby="noteModal" aria-hidden="true">
                             <div class="modal-dialog" role="document">
                                 <div class="modal-content">
                                     <div class="modal-header">
                                         <h5 class="modal-title"
-                                            id="noteModalTitle">Note dell'ordine</h5>
+                                            id="noteModalTitle<%= order.ccod %>">Note dell'ordine</h5>
                                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                             <span aria-hidden="true">&times;</span>
                                         </button>
                                     </div>
                                     <div class="modal-body">
-                                    <textarea class="form-control" name="xnote" maxlength="1000"
+                                    <textarea class="form-control" name="xnote<%= order.ccod %>" maxlength="1000"
                                               spellcheck="false" readonly><%= order.xnota %></textarea>
                                     </div>
                                     <div class="modal-footer">
